src/main/java/org/example/parser/error/ExpectedBlockException.java
package org.example.parser.error;

import lombok.AccessLevel;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.ToString;
import lombok.experimental.FieldDefaults;
import org.example.token.Token;

@Getter
@FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
@EqualsAndHashCode(callSuper = false)
@ToString
public class ExpectedBlockException extends ParserException {

	Token token;

	public ExpectedBlockException(Token token) {
		super("Expected block");
		this.token = token;
	}
}
